--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "bcrypt": "^0.8.7",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
     "connect-redis": "^3.0.2",
