--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "bcrypt": "^0.8.7",
+    "bcryptjs": "^2.4.3",
     "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
     "connect-redis": "^3.0.2",
@@ -35,9 +35,9 @@
     "htmlparser2": "^3.9.1",
     "immutable": "^3.8.1",
     "lodash": "^4.12.0",
-    "mariasql": "^0.2.6",
     "moment": "^2.14.1",
     "morgan": "^1.7.0",
+    "mysql": "github:mysqljs/mysql",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.0.1",
