database + node things fixed

--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "htmlparser2": "^3.9.1",
     "immutable": "^3.8.1",
     "lodash": "^4.12.0",
+    "mariasql": "^0.2.6",
     "moment": "^2.14.1",
     "morgan": "^1.7.0",
-    "mysql": "github:mysqljs/mysql",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.0.1",
