pre cert tls configuration

--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "flux": "^2.1.1",
+    "fs": "0.0.1-security",
     "htmlparser2": "^3.9.1",
+    "https": "^1.0.0",
     "immutable": "^3.8.1",
     "lodash": "^4.12.0",
     "mariasql": "^0.2.6",
