--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "events": "^1.1.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "fbgraph": "^1.4.1",
     "flux": "^2.1.1",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^19.0.0",
     "htmlparser2": "^3.9.1",
     "immutable": "^3.8.1",
     "lodash": "^4.12.0",
