--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "request": "^2.73.0",
-    "webpack": "^1.13.0"
+    "socket.io": "^2.0.1",
+    "webpack": "^1.13.0",
+    "ws": "^3.0.0"
   }
 }
