--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
     "connect-redis": "^3.0.2",
+    "cors": "^2.8.3",
     "events": "^1.1.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
