--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "base64url": "^2.0.0",
     "bcrypt": "^1.0.2",
     "bluebird": "^3.3.4",
     "body-parser": "^1.15.0",
