--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^15.0.1",
     "react-router-dom": "^4.1.1",
     "request": "^2.73.0",
+    "request-promise": "^4.2.1",
     "socket.io": "^2.0.1",
     "whatwg-fetch": "^1.0.0"
   },
