--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/emarkovic/lynx#readme",
   "dependencies": {
+    "@google-cloud/pubsub": "^0.12.0",
     "@slack/client": "^3.9.0",
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
